# FASTopic

./: README.md  pyproject.toml
fastopic/: FASTopic.py  _ETP.py  _fastopic.py  _plot.py
tests/: test_demo.py  test_save_load.py  test_train.py
